--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection"></link>
+  <link href="www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
 </head>
 <body>
   <center><h2>I'm Tyler</h2></center>
