--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <link href="www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
 </head>
 <body>
-  <center><h2>I'm Tyler</h2></center>
-  <p>I'm making a website here</p>
-  <a href="">My Link</a>
+  <h2 class="valign-wrapper">Tyler Hanavan</h2>
 </body>
 </html>
