fourth commit lolz

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="http://www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
+  <link href="https://www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
 </head>
 <body>
   <h2 class="valign-wrapper">Tyler Hanavan</h2>
