--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <link href="https://www.materializecss.com/css/ghpages-materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
-</head>
-<body>
-  <h2 class="valign-wrapper">Tyler Hanavan</h2>
-</body>
+  <head>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  </head>
+
+  <body>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <h2 class="valign-wrapper">Tyler Hanavan</h2>
+
+  </body>
 </html>
