--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
-    <h2 class="valign-wrapper">Tyler Hanavan</h2>
-
+    <div class="container">
+      <h2 class="valign-wrapper">Tyler Hanavan</h2>
+    </div>
   </body>
 </html>
