--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
     <div class="container">
-      <h2 class="valign-wrapper">Tyler Hanavan</h2>
+      <div class="valign-wrapper">
+        <h2 class="valign">Tyler Hanavan</h2>
+      </div>
     </div>
   </body>
 </html>
