--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-
-    <div class="container">
-      <div class="valign-wrapper">
-        <h2 class="valign">Tyler Hanavan</h2>
-      </div>
+    <div class="valign-wrapper">
+      <h5 class="valign">This should be vertically aligned</h5>
+    </div>
     </div>
   </body>
 </html>
