--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <div class="valign-wrapper">
-      <h5 class="valign">This should be vertically aligned</h5>
+    <div class="progress">
+      <div class="determinate" style="width: 70%"></div>
     </div>
     </div>
   </body>
