--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <div class="progress">
-      <div class="determinate" style="width: 70%"></div>
+      <div class="determinate" id="progress" style="width: 70%"></div>
     </div>
     </div>
   </body>
