--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="progress">
       <div class="determinate" id="progress" style="width: 0%"></div>
     </div>
+    <center><h2 id="fuck-off">Go fuck yourself</h2></center>
     </div>
   </body>
 </html>
