--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <div class="progress">
+    <div class="progress" id="progress-div">
       <div class="determinate" id="progress" style="width: 0%"></div>
     </div>
     <center><h2 id="fuck-off" style="display: none;">Go fuck yourself</h2></center>
