--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="progress" id="progress-div">
       <div class="determinate" id="progress" style="width: 0%"></div>
     </div>
-    <center><h2 id="fuck-off" style="display: none;">Go fuck yourself</h2></center>
+    <center><h2 id="status">Loading your webpage...</h2></center>
     </div>
   </body>
 </html>
