--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <center><h2 id="status">Loading your webpage...</h2></center>
+      <center>
+        <h2>Tyler Hanavan<h2>
+          <h3>Web Developer</h3>
+      </center>
     </div>
   </body>
 </html>
