--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
-  <body class="blue lighten-4">
+  <body>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <div class="blue lighten-4" style="width:100%;height:100%;display:absolute;"></div>
       <center>
         <h2>Tyler Hanavan<h2>
           <h3>Web Developer</h3>
