--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
-  <body>
+  <body class="blue lighten-4">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <div class="blue lighten-4" style="width:100%;height:100%;display:absolute;"></div>
       <center>
         <h2>Tyler Hanavan<h2>
           <h3>Web Developer</h3>
       </center>
+
+      <div class="container">
+        <div class="row">
+          <div class="col s12 center-text">
+            <h3>About Tyler</h3>
+            <p>Tyler has been programming since he was in 7th grade; about 6 years ago. Starting with Java, he has progressed to learning other languages such as PHP and JavaScript.</p>
+          </div>
+          <div class="col s6">This div is 6-columns wide</div>
+          <div class="col s6">This div is 6-columns wide</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
