Added column for About Tyler

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <h3>About Tyler</h3>
             <p>Tyler has been programming since he was in 7th grade; about 6 years ago. Starting with Java, he has progressed to learning other languages such as PHP and JavaScript.</p>
           </div>
-          <div class="col s6">This div is 6-columns wide</div>
+          <div class="col s6">
+            <center><h3>About Tyler</h3></center>
+            <p></p>
+          </div>
           <div class="col s6">This div is 6-columns wide</div>
         </div>
       </div>
