Added image under header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script type="text/javascript" src="script.js"></script>
       <center>
         <h2>Tyler Hanavan<h2>
-          <h3>Web Developer</h3>
+        <h3>Web Developer</h3>
+        <img class="responsive-img" src="https://instagram.fewr1-2.fna.fbcdn.net/t51.2885-19/s150x150/13525570_883244188470201_2022855197_a.jpg" />
       </center>
 
       <div class="container">
