--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <center>
         <h2>Tyler Hanavan<h2>
         <h3>Web Developer</h3>
-        <img class="responsive-img" src="https://instagram.fewr1-2.fna.fbcdn.net/t51.2885-19/s150x150/13525570_883244188470201_2022855197_a.jpg" />
+        <img class="responsive-img circle" src="https://instagram.fewr1-2.fna.fbcdn.net/t51.2885-19/s150x150/13525570_883244188470201_2022855197_a.jpg" />
       </center>
 
       <div class="container">
@@ -25,7 +25,6 @@
             <p>Tyler has been programming since he was in 7th grade; about 6 years ago. Starting with Java, he has progressed to learning other languages such as PHP and JavaScript.</p>
           </div>
           <div class="col s6">
-            <center><h3>About Tyler</h3></center>
             <p></p>
           </div>
           <div class="col s6">This div is 6-columns wide</div>
