Testing out Lime Queue integration

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body class="blue lighten-4">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/lime.js"></script>
     <script type="text/javascript" src="script.js"></script>
       <center>
         <h2>Tyler Hanavan<h2>
@@ -29,6 +30,9 @@
           </div>
           <div class="col s6">This div is 6-columns wide</div>
         </div>
+        <center>
+          <p id="test">Nothing here</p>
+        </center>
       </div>
     </div>
   </body>
