Yet again, testing

--- a/request.html
+++ b/request.html
@@ -1,7 +1,16 @@
-<script>
+<html>
+
+<head>
+
+  <script>
 
   var data = decodeURIComponent($.param("data"));
 
   document.write("You passed in data: " + data);
 
-</script>
+  </script>
+
+
+</head>
+
+</html>
