--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
             <p>Tyler has been programming since he was in 7th grade; about 6 years ago. Starting with Java, he has progressed to learning other languages such as PHP and JavaScript.</p>
           </div>
           <div class="col s6">
-            <p></p>
+            <h2>Web Development</h2>
+            <p>I've been dabbling in web development for the past three years. I started with learning basic HTML and using PHP as a backend, but since then I've expanded to also learn other aspects such as Javascript and SQL.</p>
           </div>
-          <div class="col s6">This div is 6-columns wide</div>
+          <div class="col s6">
+            <h2>Software Development</h2>
+            <p>Starting in middle school by learning Java, I've come to learn a number of programming languages including PHP, Javascript and SQL. I've recently started learning Python and C++, and I am excited to see what I will be able to accomplish with these languages.</p>
+          </div>
         </div>
         <center>
-          <p id="test">Nothing here</p>
+          <p id="test">Thanks for visiting!</p>
         </center>
       </div>
     </div>
