FIxing row layouts

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <h3>About Tyler</h3>
             <p>Tyler has been programming since he was in 7th grade; about 6 years ago. Starting with Java, he has progressed to learning other languages such as PHP and JavaScript.</p>
           </div>
+        </div>
+        <div class="row">
           <div class="col s6">
             <div class="center-align"><h2>Web Development</h2></div>
             <p>I've been dabbling in web development for the past three years. I started with learning basic HTML and using PHP as a backend, but since then I've expanded to also learn other aspects such as Javascript and SQL.</p>
