--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s12 m6">
+          <div class="col s12 m8 l6">
             <div class="center-align"><h2>Web Development</h2></div>
             <p>I've been dabbling in web development for the past three years. I started with learning basic HTML and using PHP as a backend, but since then I've expanded to also learn other aspects such as Javascript and SQL.</p>
           </div>
-          <div class="col s12 m6">
+          <div class="col s12 m8 l6">
             <div class="center-align"><h2>Software Development</h2></div>
             <p>Starting in middle school by learning Java, I've come to learn a number of programming languages including PHP, Javascript and SQL. I've recently started learning Python and C++, and I am excited to see what I will be able to accomplish with these languages.</p>
           </div>
